--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -55,6 +55,15 @@
             android:text="登出"
             android:textSize="18sp" />
 
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/logout_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:visibility="invisible" />
+
     </LinearLayout>
 
 </RelativeLayout>
