2017-12-06 -學校學號登入 -Facebook登入問題修正 -Facebook綁定功能 -解決畫面轉向問題 -小問題改善

--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="setPay"
-            android:text="付款"
+            android:text="手機付款"
             android:textSize="18sp" />
 
         <Button
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="setURL"
-            android:text="使用網頁版付款"
+            android:text="網頁支付"
             android:textSize="18sp" />
 
         <Button
