--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,14 +35,26 @@
         android:orientation="vertical">
 
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="學號：" />
+
         <EditText
             android:id="@+id/editText_ID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="請輸入帳號"
+            android:hint="請輸入學號（請加u)"
             android:inputType="text"
             android:singleLine="false" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="密碼：" />
 
         <EditText
             android:id="@+id/editText_password"
